Simple_Ecommerce_App/Simple_Ecommerce_App/src/main/java/com/example/Simple_Ecommerce_App/Errors/RecordNotFoundException.java
package com.example.Simple_Ecommerce_App.Errors;

public class RecordNotFoundException extends RuntimeException {
    public RecordNotFoundException() {
    }

    public RecordNotFoundException(String message) {
        super(message);
    }
}
